# Radiology-Templates

./: .gitattributes  .gitignore  QUICKSTART.md  README.md  backup.py  convert_to_docx.py  convert_to_markdown.py  convert_to_txt.py  convert_txt_to_markdown.py  generate_index.py  reports_index.json  run.py  test_equivalence.py
Reports/: Angio de Aorta.docx  TC ABDOME PELVE COM.docx  TC Abdome Pelve SEM.docx  TC Abdome Pelve TRAUMA COM.docx  TC Abdome Pelve TRAUMA SEM.docx  TC Abdome Superior COM.docx  TC Abdome Superior SEM.docx  TC Bacia SEM.docx  TC Coluna Lombar SEM.docx  TC Coluna Torácica SEM.docx  TC Coxofemoral SEM.docx  TC Crânio Pescoço COM.docx  TC Crânio Pescoço SEM.docx  TC Crânio Pescoço Tórax Abdome Pelve COM.docx  TC Crânio SEM.docx  TC Crânio Tórax Abdome Pelve SEM.docx  TC Crânio Tórax URGÊNCIA SEM.docx  TC Crânio Urgência COM.docx  TC Crânio Urgência SEM.docx  TC Crânio e Pescoço Com.docx  TC Face Com.docx  TC Face Sem.docx  TC Face e Pescoço Com.docx  TC Mastoides Sem.docx  TC Pelve Feminina COM.docx  TC Pelve Feminina SEM.docx  TC Pescoço Sem.docx  TC Pescoço Tórax TRAUMA COM.docx  TC Seios da Face COM.docx  TC Seios da Face Sem.docx  TC Tórax Abdome Pelve SEM.docx  TC Tórax Abdome Pelve URGÊNCIA COM.docx  TC Tórax Abdome Pelve URGÊNCIA SEM.docx  TC Tórax SEM.docx  TC Tórax TRAUMA COM.docx  TC Tórax TRAUMA SEM.docx  TC de Articulação Esternoclavicular SEM.docx  TC do Tornozelo SEM.docx  tcapvccl.rtf  tctrxscl.rtf
Reports_markdown/: Angio de Aorta Torácica.md  AngioTC Crânio Cervical.md  AngioTEP.md  Enterotomografia.md  (+32 more)
rust_converters/: Cargo.toml
(+129 files in other folders)
