[package]
name = "report_template_converters"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
docx-rust = "0.1.10"
regex = "1"
tempfile = "3"

[[bin]]
name = "convert_to_docx"
path = "src/bin/convert_to_docx.rs"

[[bin]]
name = "convert_to_markdown"
path = "src/bin/convert_to_markdown.rs"

[[bin]]
name = "convert_to_txt"
path = "src/bin/convert_to_txt.rs"

[[bin]]
name = "convert_txt_to_markdown"
path = "src/bin/convert_txt_to_markdown.rs"
